# slam-viewer

./: CMakeLists.txt  README.md  build.sh  clean_build.sh  run.sh
Examples/: trajectory.yaml
src/: Config.cc  Config.h  KeyFrame.cc  KeyFrame.h  Map.cc  Map.h  MapPoint.cc  MapPoint.h  SLAM_Viewer.cc
src/extra/: log.h
src/ui/: MapDrawer.cc  MapDrawer.h  Viewer.cc  Viewer.h
